--- a/contenedor.html
+++ b/contenedor.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Expresiones Regulares</title>
 	<link rel="stylesheet" href="estilos.css">
-	<link rel="stylesheet" href="font-awesome.css">
+	<link rel="stylesheet" href="css/all.min.css">
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="js/main.js"></script>
@@ -30,10 +30,10 @@
 		
 		<!-- CREO TAB DE NAVEGACIÓN PRINCIPAL----------------------------------------- -->	
 		<ul class="tabs">		
-			<li><a onclick="document.getElementById('demo').play()" href="#tab1"><span class="fa fa-home"></span><span class="tab-text">Inicio</span></a></li>
-			<li><a onclick="document.getElementById('demo').play()" href="#tab2"><span class="fa fa-group"></span><span class="tab-text">Menú</span></a></li>
-			<li><a onclick="document.getElementById('demo').play()" href="#tab3"><span class="fa fa-briefcase"></span><span class="tab-text">Créditos</span></a></li>
-			<li><a onclick="document.getElementById('demo').play()" href="#tab4"><span class="fa fa-bookmark"></span><span class="tab-text">Opciones</span></a></li>
+			<li><a onclick="document.getElementById('demo').play()" href="#tab1"><span class="fas fa-home"></span><span class="tab-text">Inicio</span></a></li>
+			<li><a onclick="document.getElementById('demo').play()" href="#tab2"><span class="fas fa-bars"></span><span class="tab-text">Menú</span></a></li>
+			<li><a onclick="document.getElementById('demo').play()" href="#tab3"><span class="fas fa-users"></span><span class="tab-text">Créditos</span></a></li>
+			<li><a onclick="document.getElementById('demo').play()" href="#tab4"><span class="fas fa-wrench"></span><span class="tab-text">Opciones</span></a></li>
 		</ul>
 
 		<!-- EMPIEZA TODAS MIS SECCIONES------------------------------------------------------ -->
@@ -53,10 +53,10 @@
 				<!-- CREO TAB DE NAVEGACIÓN MENU----------------------------------------- -->
 				<br>
 				<ul class="buttons">
-					<li><a href="#button1"><span class="fa fa-home"></span><span class="tab-text">Teoría</span></a></li>
-					<li><a href="#button2"><span class="fa fa-group"></span><span class="tab-text">Ejemplos</span></a></li>
-					<li><a href="#button3"><span class="fa fa-briefcase"></span><span class="tab-text">Actividades</span></a></li>
-					<li><a href="#button4"><span class="fa fa-bookmark"></span><span class="tab-text">Evaluación</span></a></li>
+					<li><a href="#button1"><span class="fas fa-book"></span><span class="tab-text">Teoría</span></a></li>
+					<li><a href="#button2"><span class="fas fa-chalkboard"></span><span class="tab-text">Ejemplos</span></a></li>
+					<li><a href="#button3"><span class="fas fa-edit"></span><span class="tab-text">Actividades</span></a></li>
+					<li><a href="#button4"><span class="fas fa-clipboard"></span><span class="tab-text">Evaluación</span></a></li>
 				</ul>
 			</article>
 
@@ -91,9 +91,9 @@
 				<br>
 				<!-- CREO TAB DE NAVEGACIÓN MENU 2----------------------------------------- -->
 				<ul class="buttonsTeoria">
-					<li><a href="#buttonT1"><span class="fa fa-home"></span><span class="tab-text">Operaciones con las ER</span></a></li>
-					<li><a href="#buttonT2"><span class="fa fa-group"></span><span class="tab-text">Precedencia de los Operadores</span></a></li>
-					<li><a href="#buttonT3"><span class="fa fa-briefcase"></span><span class="tab-text">Condiciones para construir ER</span></a></li>
+					<li><a href="#buttonT1"><span class="tab-text">Operaciones con las ER</span></a></li>
+					<li><a href="#buttonT2"><span class="tab-text">Precedencia de los Operadores</span></a></li>
+					<li><a href="#buttonT3"><span class="tab-text">Condiciones para construir ER</span></a></li>
 				</ul>
 
 			</article>
@@ -121,13 +121,13 @@
 				<p>Las operaciones definidas para las ER son:</p>
 
 				<ul class="buttonsOER">
-					<li><a href="#buttonO1"><span class="fa fa-home"></span><span class="tab-text">Unión</span></a></li>
-					<li><a href="#buttonO2"><span class="fa fa-group"></span><span class="tab-text">Concatenación</span></a></li>
-					<li><a href="#buttonO3"><span class="fa fa-briefcase"></span><span class="tab-text">Cierre de estrella</span></a></li>
+					<li><a href="#buttonO1"><span class="tab-text">Unión</span></a></li>
+					<li><a href="#buttonO2"><span class="tab-text">Concatenación</span></a></li>
+					<li><a href="#buttonO3"><span class="tab-text">Cierre de estrella</span></a></li>
 				</ul>
 				<br>
 				<ul class="buttonsRegresar">
-					<li><a href="#button1"><span class="fa fa-home"></span><span class="tab-text">Regresar</span></a></li>
+					<li><a href="#button1"><span class="fas fa-undo"></span><span class="tab-text">Regresar</span></a></li>
 				</ul>
 			</article>
 
@@ -150,7 +150,7 @@
 				</p>
 
 				<ul class="buttonsRegresar">
-					<li><a href="#button1"><span class="fa fa-home"></span><span class="tab-text">Regresar</span></a></li>
+					<li><a href="#button1"><span class="fas fa-undo"></span><span class="tab-text">Regresar</span></a></li>
 				</ul>
 			</article>
 
@@ -169,7 +169,7 @@
 				</p>
 
 				<ul class="buttonsRegresar">
-					<li><a href="#button1"><span class="fa fa-home"></span><span class="tab-text">Regresar</span></a></li>
+					<li><a href="#button1"><span class="fas fa-undo"></span><span class="tab-text">Regresar</span></a></li>
 				</ul>
 			</article>
 
@@ -191,11 +191,11 @@
 				</h4>
 				<br>
 				<ul class="buttonsAnimaciones">
-					<li><a href="#animacionUnion1"><span class="fa fa-home"></span><span class="tab-text">Ver animación 1</span></a></li>
-					<li><a href="#animacionUnion2"><span class="fa fa-home"></span><span class="tab-text">Ver animación 2</span></a></li>
+					<li><a href="#animacionUnion1"><span class="fas fa-play"></span><span class="tab-text">Ver animación 1</span></a></li>
+					<li><a href="#animacionUnion2"><span class="fas fa-play"></span><span class="tab-text">Ver animación 2</span></a></li>
 				</ul>
 				<ul class="buttonsRegresar">
-					<li><a href="#buttonT1"><span class="fa fa-home"></span><span class="tab-text">Regresar</span></a></li>
+					<li><a href="#buttonT1"><span class="fa fa-undo"></span><span class="tab-text">Regresar</span></a></li>
 				</ul>
 			</article>
 
@@ -211,10 +211,10 @@
 				</h4>
 				<br>
 				<ul class="buttonsAnimaciones">
-					<li><a href="#animacionConcatenacion"><span class="fa fa-home"></span><span class="tab-text">Ver animación</span></a></li>
+					<li><a href="#animacionConcatenacion"><span class="fas fa-play"></span><span class="tab-text">Ver animación</span></a></li>
 				</ul>
 				<ul class="buttonsRegresar">
-					<li><a href="#buttonT1"><span class="fa fa-home"></span><span class="tab-text">Regresar</span></a></li>
+					<li><a href="#buttonT1"><span class="fas fa-undo"></span><span class="tab-text">Regresar</span></a></li>
 				</ul>
 			</article>
 
@@ -230,10 +230,10 @@
 				</h4>
 				<br>
 				<ul class="buttonsAnimaciones">
-					<li><a href="#animacionCierre"><span class="fa fa-home"></span><span class="tab-text">Ver animación</span></a></li>
+					<li><a href="#animacionCierre"><span class="fas fa-play"></span><span class="tab-text">Ver animación</span></a></li>
 				</ul>
 				<ul class="buttonsRegresar">
-					<li><a href="#buttonT1"><span class="fa fa-home"></span><span class="tab-text">Regresar</span></a></li>
+					<li><a href="#buttonT1"><span class="fas fa-undo"></span><span class="tab-text">Regresar</span></a></li>
 				</ul>
 			</article>
 
