--- a/contenedor.html
+++ b/contenedor.html
@@ -66,7 +66,7 @@
 				<br>
 				<h4 align="center">Elaborado por:</h4>
 				<p id="autores">Br. Alejandro Emmanuel Canche Kú</p>
-				<p id="autores">Br. Alejandro Emmanuel Canche Kú</p>
+				<p id="autores">Br. Randy Josue Castro</p>
 				<h4 align="center">En coordinación:</h4>
 				<p id="autores">MC. Cinthia Maribel González Segura</p>
 			</article>
@@ -167,6 +167,11 @@
 					Corrección: Las ER debe rechazar a TODA palabra que NO
 					forme parte del lenguaje regular.
 				</p>
+				<br>
+				<ul class="buttonsAnimaciones">
+					<li><a href="#animacionCompletez"><span class="fas fa-play"></span><span class="tab-text">Completez</span></a></li>
+					<li><a href="#animacionCorreccion"><span class="fas fa-play"></span><span class="tab-text">Correctez</span></a></li>
+				</ul>
 
 				<ul class="buttonsRegresar">
 					<li><a href="#button1"><span class="fas fa-undo"></span><span class="tab-text">Regresar</span></a></li>
@@ -241,18 +246,46 @@
 
 			<article id="animacionUnion1">
 				<img src="img/animacionUnion1.gif">
+				<ul class="buttonsRegresar">
+					<li><a href="#buttonO1"><span class="fa fa-undo"></span><span class="tab-text">Regresar</span></a></li>
+				</ul>
 			</article>
 
 			<article id="animacionUnion2">
 				<img src="img/animacionUnion2.gif">
+				<ul class="buttonsRegresar">
+					<li><a href="#buttonO1"><span class="fa fa-undo"></span><span class="tab-text">Regresar</span></a></li>
+				</ul>
 			</article>
 
 			<article id="animacionConcatenacion">
 				<img src="img/animacionConcatenacion.gif">
+				<ul class="buttonsRegresar">
+					<li><a href="#buttonO2"><span class="fa fa-undo"></span><span class="tab-text">Regresar</span></a></li>
+				</ul>
 			</article>
 
 			<article id="animacionCierre">
 				<img src="img/animacionCierreEstrella.gif">
+				<ul class="buttonsRegresar">
+					<li><a href="#buttonO3"><span class="fa fa-undo"></span><span class="tab-text">Regresar</span></a></li>
+				</ul>
+			</article>
+
+			<!-- INICIA SECCIONES DE ANIMACIONES DE CONDICIONES-------------------------------------- -->
+
+			<article id="animacionCompletez">
+				<img src="img/animacionCompletez.gif">
+				<ul class="buttonsRegresar">
+					<li><a href="#buttonT3"><span class="fa fa-undo"></span><span class="tab-text">Regresar</span></a></li>
+				</ul>
+			</article>
+
+			<article id="animacionCorreccion">
+				<img src="img/animacionCorreccion.gif">
+				<ul class="buttonsRegresar">
+					<li><a href="#buttonT3"><span class="fa fa-undo"></span><span class="tab-text">Regresar</span></a></li>
+				</ul>
 			</article>
 
 		</div>
