--- a/index.html
+++ b/index.html
@@ -5,23 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Expresiones Regulares</title>
+    <title>BOTER | Expresiones Regulares</title>
     <link rel="stylesheet" href="estilosHeader.css">
 </head>
+<!-- Hola qué tal, te recuerdo que la web es de uso libre -->
+<!-- usala para lo que desees y no olvides suscribirte a AlexCG Design -->
+<!-- Web hecha por AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG Design -->
+<!-- ->>>> https://www.youtube.com/alexcgdesign <<<<- -->
 
-	<body>
-		<div class="containVertical">
-			
-		</div>
-		<header class="contain">
-	        <div class="textos">
-	        	<br><br><br>
-	            <h1 class="titulo">BotER</h1>
-	            <h2 class="subtitulo">Expresiones Regulares</h2>
-	            <a href="contenedor.html" class="boton">COMENZAR</a>
-	            <br><br><br><br><br>
-	        </div>
-	    </header>
-	</body>
+<body>
+    <header>
+        <div class="textos">
+            <br><br><br><br>
+            <h1 class="titulo">BOTER</h1>
+            <h3 class="subtitulo">Expresiones Regulares</h3>
+            <a href="contenedor.html" class="boton">Comenzar</a>
+            <br><br><br><br>
+        </div>
+    </header>
+
+    <footer>
+        <div class="contenedor">
+            <h2 class="titulo-footer">Contactanos</h2>
+            <h3 class="subtitulo-footer">Lo apreciariamos mucho su opinión</h3>
+            <div class="footer">
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Nombre">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese su mensaje..."></textarea>
+                    <input type="submit" value="Enviar">
+                </form>
+            </div>
+        </div>
+    </footer>
+</body>
 
 </html>
